First successful takeoff
Signed-off-by: Oyzn <937605633@qq.com>
-Added motor control function
-When the speed of SPI is changed, the transmission of SPI&DMA run Normally
-The received array of MPU6000 data replaced global with local for resolving hardfault
-The Magnetometer not used

--- a/OyznFCode/OyznFCode.ioc
+++ b/OyznFCode/OyznFCode.ioc
@@ -58,7 +58,7 @@ Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_RX.0.Mode=DMA_NORMAL
 Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
 Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -68,7 +68,7 @@ Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.1.Mode=DMA_NORMAL
 Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
 Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
@@ -121,10 +121,10 @@ FREERTOS.configUSE_TICK_HOOK=1
 FREERTOS.configUSE_TRACE_FACILITY=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.ClockSpeed=400000
+I2C1.ClockSpeed=100000
 I2C1.DualAddressMode=I2C_DUALADDRESS_DISABLE
 I2C1.GeneralCallMode=I2C_GENERALCALL_DISABLE
-I2C1.I2C_Mode=I2C_Fast
+I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode,OwnAddress,GeneralCallMode,DualAddressMode,ClockSpeed
 I2C1.OwnAddress=0x0A
 KeepUserPlacement=false
@@ -153,43 +153,42 @@ Mcu.Pin1=PH0-OSC_IN
 Mcu.Pin10=PA6
 Mcu.Pin11=PA7
 Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB10
-Mcu.Pin16=PB12
-Mcu.Pin17=PB13
-Mcu.Pin18=PB14
-Mcu.Pin19=PB15
+Mcu.Pin13=PB10
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PC6
+Mcu.Pin19=PC7
 Mcu.Pin2=PH1-OSC_OUT
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PC9
-Mcu.Pin23=PA8
-Mcu.Pin24=PA9
-Mcu.Pin25=PA10
-Mcu.Pin26=PA11
-Mcu.Pin27=PA12
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
+Mcu.Pin20=PC8
+Mcu.Pin21=PC9
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PA15
 Mcu.Pin3=PC0
-Mcu.Pin30=PA15
-Mcu.Pin31=PC10
-Mcu.Pin32=PB3
-Mcu.Pin33=PB4
-Mcu.Pin34=PB5
-Mcu.Pin35=PB6
-Mcu.Pin36=PB7
-Mcu.Pin37=PB9
-Mcu.Pin38=VP_FATFS_VS_Generic
-Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin30=PC10
+Mcu.Pin31=PB3
+Mcu.Pin32=PB4
+Mcu.Pin33=PB5
+Mcu.Pin34=PB6
+Mcu.Pin35=PB7
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_FATFS_VS_Generic
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin39=VP_SYS_VS_tim1
 Mcu.Pin4=PC1
-Mcu.Pin40=VP_SYS_VS_tim1
 Mcu.Pin5=PC2
 Mcu.Pin6=PC3
 Mcu.Pin7=PA1
 Mcu.Pin8=PA3
 Mcu.Pin9=PA5
-Mcu.PinsNb=41
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -255,14 +254,6 @@ PA8.Mode=Synchronous
 PA8.Signal=USART1_CK
 PA9.Mode=Synchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB0.GPIO_PuPd=GPIO_PULLUP
-PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB0.Signal=S_TIM3_CH3
-PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB1.GPIO_PuPd=GPIO_PULLUP
-PB1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB1.Signal=S_TIM3_CH4
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=AT7456_CS
 PB10.Locked=true
@@ -329,8 +320,16 @@ PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC6.Signal=S_TIM3_CH1
 PC7.Signal=S_TIM3_CH2
+PC8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC8.GPIO_PuPd=GPIO_PULLUP
+PC8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
+PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PC9.GPIO_PuPd=GPIO_PULLUP
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC9.Locked=true
-PC9.Signal=GPIO_Output
+PC9.Signal=S_TIM3_CH4
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -348,7 +347,7 @@ ProjectManager.DeviceId=STM32F405RGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x2000
+ProjectManager.HeapSize=0x1000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -359,7 +358,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=OyznFCode.ioc
 ProjectManager.ProjectName=OyznFCode
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x2000
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
@@ -404,21 +403,21 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Output Compare1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,Output Compare2 CH2
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,Output Compare3 CH3
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
-SH.S_TIM3_CH4.0=TIM3_CH4,Output Compare4 CH4
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM9_CH2.0=TIM9_CH2,Input_Capture2_from_TI2
 SH.S_TIM9_CH2.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=1.3125 MBits/s
+SPI1.CalculateBaudRate=656.25 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase,CRCCalculation
 SPI1.Mode=SPI_MODE_MASTER
@@ -442,19 +441,11 @@ TIM2.IPParameters=Period,Channel-Output Compare1 CH1,OCMode_1,AutoReloadPreload
 TIM2.OCMode_1=TIM_OCMODE_TOGGLE
 TIM2.Period=105 - 1
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM3.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
-TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM3.Channel-Output\ Compare4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-Output Compare1 CH1,Channel-Output Compare2 CH2,Channel-Output Compare3 CH3,Channel-Output Compare4 CH4,AutoReloadPreload,OC1Preload,OC2Preload,OC3Preload,OC4Preload,OCMode_1,OCMode_2,OCMode_3,OCMode_4,Prescaler
-TIM3.OC1Preload=DISABLE
-TIM3.OC2Preload=DISABLE
-TIM3.OC3Preload=DISABLE
-TIM3.OC4Preload=DISABLE
-TIM3.OCMode_1=TIM_OCMODE_TOGGLE
-TIM3.OCMode_2=TIM_OCMODE_TOGGLE
-TIM3.OCMode_3=TIM_OCMODE_TOGGLE
-TIM3.OCMode_4=TIM_OCMODE_TOGGLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=AutoReloadPreload,Prescaler,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM3.Prescaler=4
 TIM9.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM9.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
